Last commit using ModLoader API